syntax = "proto3";

option java_package = "ua.nedz.grpc";
option java_outer_classname = "PlanetProto";

package deathstar;

message Planet {
    int64 planetId = 1;
    string name = 2;
    int64 weight = 3;
    int32 img = 4;
    Coordinates coordinates = 5;
}

message Coordinates {
    int32 x = 1;
    int32 y = 2;
}

message Planets {
    repeated Planet planets = 1;
}

message DestroyPlanetRequest {
    string userName = 1;
    int64 planetId = 2;
    int64 weight = 3;
    Coordinates coordinates = 4;
}